syntax = "proto3";

//option go_package = "github.com/ac0v/aspera/pkg/api/p2p/";

package p2p;

import "attachment.proto";

message GetCumulativeDifficultyResponse {
  int32 blockchainHeight = 1;
  string cumulativeDifficulty = 2;
}

message GetNextBlocksResponse {
  repeated Block nextBlocks = 1;
}

message GetNextBlockIdsResponse {
  repeated uint64 nextBlockIds = 1;
}

message GetPeers {
  repeated string peers = 1;
}

message Block {
    uint32 payloadLength = 1;
    int64 totalAmountNQT = 2;
    bytes generationSignature = 3;
    bytes generatorPublicKey = 4;
    bytes payloadHash = 5;
    bytes blockSignature = 6;
    repeated Transaction transactions = 7;
    int32 version = 8;
    uint64 nonce = 9;
    int64 totalFeeNQT = 10;
    bytes blockATs = 11;
    uint64 previousBlock = 12;
    uint64 timestamp = 13;
    uint64 block = 14;
    int32 height = 15;
    bytes previousBlockHash = 16;
}

message Transaction {
    uint32 Type = 1;
    uint32 Subtype = 2;
    uint32 Version = 3;
    uint32 timestamp = 4;
    uint32 deadline = 5;
    bytes senderPublicKey = 6;
    uint64 recipientID = 7;
    uint64 amountNQT = 8;
    uint64 feeNQT = 9;
    bytes referencedTransactionFullHash = 10;
    bytes signature = 11;
    uint32 ecBlockHeight = 12;
    uint64 ecBlockID = 13;
    Attachment attachment = 14;
    repeated Attachment appendixes = 15;
}

